Switch to JUnit 5
POM has been configured to compile and run unit tests with Java 11 (because
JUnit 5 requires at least Java 8). However, IDEs might not support different
Java versions for main code and test code.

Another issue is that the proto module uses Google Truth which has JUnit 4 as
transitive dependency.